--- a/sections/b.main/3.theory/1.expressivity.tex
+++ b/sections/b.main/3.theory/1.expressivity.tex
@@ -10,7 +10,7 @@ The main difficulties that arise when weakening axioms in \SROIQ ontologies, and
   As another example, with less trivial weakening, take the ontology $\Omc = \{ r \circ s \circ r \sqsubseteq t, \top \sqsubseteq \forall t.\nominal a, \top \sqsubseteq \exists s.\nominal a \}$. Since the range of $t$ is restricted to the single individual $a$, and $s$ contains all connections to $a$, $t \sqsubseteq_\Omc s$. The axiom $r \circ s \circ r \sqsubseteq t$ could therefore be weakened to $r \circ s \circ r \sqsubseteq s$. Yet, this would result in a non-regular RBox.
 \end{example}
 
-The weakening proposed in \cite{troquard2018repairing} and described above in \cref{weakening-alc} operates on \ALC ontologies. A similar approach can also be used for more expressive logics like \ALCHOIQ, without additional constraints. In order to extend axiom weakening to \SROIQ ontologies, however, it is necessary to restrict the allowed weakening accordingly, to ensure that these issues are avoided. In \cite{confalonieri2020towards} an axiom weakening operator is proposed for parts of \SROIQ. However, to prevent the aforementioned issues, some restrictions are put in place. For example, the refinement of RIAs has not been considered at all. For this thesis, however, the axiom weakening operator has been extended to handle also RIAs. To achieve this, it must be ensured that when weakening disjoint role axioms or refining cardinality and \self constraints, only simple roles are used. Further, it must be guaranteed that all roles that are currently used in such contexts remain simple even after adding the weakened axioms to the ontology. Finally, the regularity of the RBox must be maintained by the addition of the weakened axioms. We now discuss which restrictions we applied to satisfy these requirements.
+The weakening proposed in \cite{troquard2018repairing} and described above in \cref{weakening-alc} operates on \ALC ontologies. A similar approach can also be used for more expressive logics like \ALCHOIQ, without any special constraints. In order to extend axiom weakening to \SROIQ ontologies, however, it is necessary to restrict the allowed weakenings, to ensure that these issues are avoided. In \cite{confalonieri2020towards} an axiom weakening operator is proposed for parts of \SROIQ. However, to prevent the aforementioned issues, some restrictions are put in place. For example, the refinement of RIAs has not been considered at all. For this thesis, however, the axiom weakening operator has been extended to handle also RIAs. To achieve this, it must be ensured that when weakening disjoint role axioms or refining cardinality and \self constraints, only simple roles are used. Further, it must be guaranteed that all roles that are currently used in such contexts remain simple even after adding the weakened axioms to the ontology. Finally, the regularity of the RBox must be maintained by the addition of the weakened axioms. We now discuss which restrictions we applied to satisfy these requirements.
 
 Firstly, the covers and refinement operators for roles are defined to operate only on simple roles. A similar restriction has already been applied to the refinement operators suggested in \cite{confalonieri2020towards}. Restricting the refinement to simple roles guarantees that the new axioms created by weakening will not contain non-simple roles in axioms or concepts where simple roles are required. An important detail that has not been considered in \cite{confalonieri2020towards} is that the roles over which the covers operate must be simple in all ontologies that the weaker axioms will be used in. It is therefore generally not sufficient to use all the roles that are simple in the reference ontology, since the reference ontology may not contain all RBox axioms, and therefore contain simple roles that are not simple in the full ontology.
 
@@ -18,9 +18,9 @@ Firstly, the covers and refinement operators for roles are defined to operate on
   Given the inconsistent ontology $\Omc = \{ s \circ s \sqsubseteq s, s \sqsubseteq r, t \sqsubseteq r, \top \sqsubseteq \forall r.\bot, \top \sqsubseteq \exists s.\top, \top \sqsubseteq \exists t.\self \}$, we may choose as reference ontology the maximal consistent subset $\Omcref = \Omc \setminus \{ s \sqsubseteq r \}$. In this case, $r$ is simple in $\Omcref$, however, it is not allowed to weaken $\top \sqsubseteq \exists t.\self$ to $\top \sqsubseteq \exists r.\self$, because $r$ is not simple in $\Omc \setminus \{ \top \sqsubseteq \exists t.\self \} \cup \{ \top \sqsubseteq \exists r.\self \}$ and can therefore not be used in \self constraints.
 \end{example}
 
-For this reason, we give to the upward and downward cover as an argument not only the reference ontology $\Omcref$, but also the full ontology $\Omcfull$. The same must be done for the axiom weakening operator that uses the cover functions. Both $\Omcref$ and $\Omcfull$ share the same vocabulary $N_I$, $N_C$, and $N_R$. We assume that all roles that are simple in $\Omcfull$ are also simple in $\Omcref$. While this is not strictly required, it will be true for all algorithms shown in this thesis that $\Omcref \subseteq \Omcfull$. In the context of repairing ontologies, $\Omcfull$ can be chosen to be the unmodified ontology that we want to repair.
+For this reason, we give to the upward and downward cover functions as an argument not only the reference ontology $\Omcref$, but also the full ontology $\Omcfull$. The same must be done for the axiom weakening operator. Both $\Omcref$ and $\Omcfull$ share the same vocabulary $N_I$, $N_C$, and $N_R$. We assume that all roles that are simple in $\Omcfull$ are also simple in $\Omcref$. While this is not strictly required, it will be true for all algorithms shown in this thesis that $\Omcref \subseteq \Omcfull$. In the context of repairing ontologies, $\Omcfull$ can be chosen to be the unmodified ontology that we want to repair.
 
 An alternative to always choosing simple roles is to define two versions of the covers, one which operators only over simple roles and one which uses also non-simple roles. Then in a context in which simple roles are required, the more restrictive cover is used, while in all other cases, the complete covers can be employed. While this variation has been implemented, it has not been evaluated and will not be further considered in the rest of the thesis.
 
-Another assumption made in \cite{confalonieri2020towards} is that the existential and universal roles are simple, and may therefore be included in the upward and downward covers. While this is not a significant restriction in theory, it contradicts the OWL 2 DL specification, which directly defines these roles to be non-simple in every ontology. Including the existential and universal roles in the covers, while augmenting the number of possible weakening, is not necessarily required. Therefore, this thesis will consider, as stated in \cref{sroiq-syntax}, the universal role to be non-simple. This allows the implementation of the proposed approach using existing highly-optimized reasoners designed for OWL 2 DL. It has to be considered, however, that removing the existential and universal role from the covers can prevent the weakening of RIAs, disjoint role axioms and role assertions to tautologies. Removal of these axioms may be required if they are by themselves inconsistent, meaning that not being able to weaken them to tautologies could mean the repair algorithm never terminates. For this reason, the weakening operator for these axioms explicitly includes a tautological axiom. Note that for the case of positive and negative role assertions, the extension of the covers to include also non-simple roles would be an alternative solution. This is however not the case for disjoint role assertions, as the roles used in them must always be simple.
+Another assumption made in \cite{confalonieri2020towards} is that the existential and universal roles are simple, and may therefore be included in the upward and downward covers. While this is not a significant restriction in theory, it contradicts the OWL 2 DL specification, which directly defines these roles to be non-simple in every ontology. Including the existential and universal roles in the covers, while augmenting the number of possible weakening, is not necessarily required. Therefore, this thesis will consider, as stated in \cref{sroiq-syntax}, the universal role to be non-simple. This allows the implementation of the proposed approach using existing highly-optimized reasoners designed for OWL 2 DL. It has to be considered, however, that removing the existential and universal roles from the covers can prevent the weakening of RIAs, disjoint role axioms, and role assertions to tautologies. Removal of these axioms may be required if they are by themselves inconsistent, meaning that not being able to weaken them to tautologies could mean that the repair algorithm never terminates. For this reason, the weakening operator for these axioms explicitly includes a tautological axiom. Note that for the case of positive and negative role assertions, the extension of the covers to include also non-simple roles would be an alternative solution. This is however not the case for disjoint role assertions, as the roles used in them must always be simple.
 
