--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -159,7 +159,7 @@ Note that removal of axioms will never cause a role that was previously simple t
 \end{lemma}
 
 \begin{proof}(\emph{Sketch}) \phantomsection\label{proof:regularity}
-  Let us first argue that if there exists a preorder that satisfies the constraints necessary for checking regularity, then there exists $\preceq$ such that $S_1 \preceq S_2$, $S \preceq R$ and $R \not\preceq S$ for all simple roles $S, S_1, S_2$ and non-simple roles $R$. Firstly, $S_1 \not\preceq S_2$ and $S \not\preceq R$ cannot be required, because the absence of a tuple is only required for complex RIAs, where the super role must not be a predecessor of the roles on the left-hand side. Since $S_1$ and $S$ are simple, they do not appear as the super role in a complex RIA. Similarly, $R \preceq S$ cannot be required. Since $S$ is simple and $R$ non-simple, it cannot be required directly through an axiom of the form $R \sqsubseteq S$. By induction, it cannot be required through transitivity, since $R \preceq T$ and $T \preceq S$ would have to be required. If $T$ is simple, $R \preceq T$ cannot be required, and if $T$ is non-simple, $T \preceq S$ cannot be required.
+  Let us first argue that if there exists a preorder $\preceq$ that satisfies the constraints necessary for checking regularity, then there exists $\preceq$ such that $S_1 \preceq S_2$, $S \preceq R$ and $R \not\preceq S$ for all simple roles $S, S_1, S_2$ and non-simple roles $R$. Firstly, $S_1 \not\preceq S_2$ and $S \not\preceq R$ cannot be required, because the absence of a tuple is only required for complex RIAs, where the super role must not be a predecessor of the roles on the left-hand side. Since $S_1$ and $S$ are simple, they do not appear as the super role in a complex RIA. Similarly, $R \preceq S$ cannot be required. Since $S$ is simple and $R$ non-simple, it cannot be required directly through an axiom of the form $R \sqsubseteq S$. By induction, it cannot be required through transitivity, since $R \preceq T$ and $T \preceq S$ would have to be required. If $T$ is simple, $R \preceq T$ cannot be required, and if $T$ is non-simple, $T \preceq S$ cannot be required.
 
   Since $\Omc$ has a regular RBox, there exists such a $\preceq$ for $\Omc$. We will show that $\preceq$ is also a witness for regularity of $\Omc \cup \{ \alpha' \}$. All RIAs in $\Omc$ are of one of the allowed forms for $\preceq$. It is therefore sufficient to verify that $\alpha'$ has one of the allowed forms.
   If $\alpha' = \alpha$ or $\alpha'$ is not a RIA, it does not affect the regularity.
@@ -170,10 +170,10 @@ Note that removal of axioms will never cause a role that was previously simple t
 As for the invariant on simple roles, also regularity is maintained by repeated replacement of axioms with weakenings. With the help of \cref{lem:simple-roles} and \cref{lem:regularity} we can now sketch a proof showing that adding weakened axioms to a \SROIQ ontology will yield another valid \SROIQ ontology.
 
 \begin{theorem} \label{lem:global-constraints}
-  Given that $\Omcref$ and $\Omcfull$ are valid \SROIQ ontologies. For every axiom $\alpha \in \Omcfull$, if $\alpha' \in g_{\Omcref,\Omcfull}(\alpha)$, then $\Omcfull \cup \{ \alpha' \}$ is a valid \SROIQ ontology.
+  Given that $\Omc$, $\Omcref$, and $\Omcfull$ are valid \SROIQ ontologies and that all simple roles of $\Omcfull$ are also simple in $\Omc$. For every axiom $\alpha \in \Omc$, if $\alpha' \in g_{\Omcref,\Omcfull}(\alpha)$, then $\Omc \cup \{ \alpha' \}$ is a valid \SROIQ ontology.
 \end{theorem}
 
 \begin{proof}(\emph{Sketch})
   It has been established already in \cref{lem:regularity}, that the regularity of the RBox will be preserved.
-  It is guaranteed by \cref{lem:simple-roles} that all roles that were simple before addition, are still simple afterwards. Therefore, all usages of roles in axioms and concepts that were not touched by the refinement do not pose a problem. The condition that the upward and downward covers of a role contain only roles that are simple in $\Omcfull$ (and therefore by \cref{lem:simple-roles} also in $\Omcfull \cup \{ \alpha' \}$) forces that every refinement of a role is simple. This restriction to simple roles guarantees that no non-simple role may be used in disjoint role axioms or the scope of cardinality and self constraints.
+  It is guaranteed by \cref{lem:simple-roles} that all roles that were simple before addition, are still simple afterwards. Therefore, all usages of roles in axioms and concepts that were not touched by the refinement do not pose a problem. The condition that the upward and downward covers of a role contain only roles that are simple in $\Omcfull$ (and therefore by \cref{lem:simple-roles} also in $\Omc \cup \{ \alpha' \}$) forces that every refinement of a role is simple. This restriction to simple roles guarantees that no non-simple role may be used in disjoint role axioms or the scope of cardinality and self constraints.
 \end{proof}
